Initial Quote Upload

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Punchlist Timeline",
+  "name": "Verkada Quote Builder",
   "homepage": "https://adkathlete.github.io/punchlist-timelines",
   "private": true,
   "version": "0.0.0",
